# kymenu-extras

./: Cargo.toml  README.md  flake.nix
.forgejo/workflows/: ci.yml
common/: Cargo.toml
common/src/: lib.rs
crates/common/src/: lib.rs
crates/kymenu-dir/: Cargo.toml
crates/kymenu-dir/src/: cli.rs  extracted.rs  main.rs
crates/kymenu-ssh/: Cargo.toml  README.md  build.rs
crates/kymenu-ssh/src/: cli.rs  lib.rs  main.rs
crates/kymenu-ssh/test_data/basic/: config  config_include
crates/kymenu-ssh/test_data/matchers/: config
crates/ssh-matcher/: Cargo.toml
crates/ssh-matcher/src/: lib.rs
kymenu-dir/: Cargo.toml  README.md  build.rs
kymenu-dir/src/: cli.rs  extracted.rs  main.rs
nix/: kymenu-extras.nix
