[package]
name = "kymenu-dir"
description = "kymenu-dir recursively lists directories and files with filtering and formatting options for kyvim integration"
edition = "2024"
version.workspace = true
authors.workspace = true

[dependencies]
common = { path = "../common" }

clap = { version = "4.6.1", features = ["derive"] }
walkdir = "2.5.0"
regex = "1.12.4"

[build-dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
clap_mangen = "0.3.0"
