[package]
name = "kymenu-ssh"
description = "kymenu-ssh parses system and user SSH configs and provides a searchable host list"
edition = "2024"
version.workspace = true
authors.workspace = true

[dependencies]
common = { path = "../common" }
ssh-matcher = { path = "../ssh-matcher" }

clap = { version = "4.6.1", features = ["derive"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
regex = "1.12.4"

[build-dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
clap_mangen = "0.3.0"
